--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link href="/style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
     <title>Page Selection</title>
 </head>
 <body>
@@ -53,6 +53,6 @@
         <button class="done-btn">Done</button>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
